- pagina login - botao de sair no final da pagina - tela editar perfil - tela serviços por categoria (nao carrega a primeira vez) - tela login quando surge teclado - custon drawer mudando conforme estado do login - tela de agendamento exibir os funcionários e a seguir escolha de horário !!!!! - genero no login e no profile funcionando - login pelo google (criacao de conta também) - verificacao e-mail ja existe e senha - apagar estabelecimento favorito - implementar o buscar (lupa) - Não vai para a pagina da empresa - metodo de pagamento falta poder apagar o metodo - utilizando o timestamp da maneira certa - tela inicial do app - tela de reportar bug - verificar se o horário ja esta agendado no scheduleScreen - botao favorito - aterar agendamento erro na mudanca de horario
ERROS:
- deletar evento agendado sem verificar
- alterar horario de agendamento
- drawer com problema (Nao mostra o nome) quando loga pelo google

FALTA:
- terminar o metodo de login pela apple

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,14 @@ dependencies:
   google_sign_in: ^4.3.0
   apple_sign_in: ^0.1.0
   awesome_card: ^1.1.0
+  flutter_launcher_icons: ^0.7.4
+  smooth_star_rating: ^1.0.4+2
+
+flutter_icons:
+  ios: true
+  android: true
+  image_path_ios: "lib/images/icon.png"
+  image_path_android: "lib/images/icon.png"
 
 
 
