--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,8 +49,8 @@ dependencies:
 flutter_icons:
   ios: true
   android: true
-  image_path_ios: "lib/images/icon.png"
-  image_path_android: "lib/images/icon.png"
+  image_path_ios: "lib/images/icon.jpg"
+  image_path_android: "lib/images/icon.jpg"
 
 
 
@@ -71,8 +71,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - lib/images/logo.png
+     - lib/images/icon.jpg
      - lib/images/logo_thin.png
+     - lib/images/logo.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
